# investment-research-platform

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.indexer  pyproject.toml  pytest.ini
backend/app/: clients.py  database.py  graph.py  hello.py  logging_config.py  main.py  metrics.py  models.py  sse_types.py  state.py  streaming.py  tracing.py
backend/app/agents/: base.py  cache_check.py  compare_agent.py  filings_agent.py  financial_agent.py  general_agent.py  news_agent.py  preflight.py  router_agent.py  synthesizer.py
backend/app/cache/: cache_keys.py  redis_client.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  conversations.py  financial.py  news.py  research.py
backend/app/rag/: background_ingest.py  chunker.py  downloader.py  embedder.py  index.py  ingest.py  parser.py  types.py
backend/app/routers/: analysis.py  cache.py  conversations.py  ingest.py  news.py  rag.py  research.py
backend/app/tools/: market_data.py  news_data.py  retrieval.py  tool_demo.py
backend/app/utils/: ticker.py
backend/scripts/: build_index.py  evaluate_pipeline.py  evaluate_retrieval.py  export_chunks.py  find_eval_candidates.py  langsmith_eval.py  review_misses.py  test_cache.py  test_ingest.py  test_prompt_cache.py  upload_eval_dataset.py
backend/tests/: conftest.py  test_phase1.py  test_phase3.py  test_phase4.py
backend/tests/integration/: test_analysis.py  test_cache.py  test_conversations.py  test_ingest.py  test_news.py  test_rag.py  test_research.py
backend/tests/unit/: test_graph.py  (+5 more)
(+58 files in other folders)
