[project]
name = "investment-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "anthropic>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "langsmith>=0.7.33",
    "yfinance>=1.3.0",
    "tenacity>=9.1.4",
    "pgvector>=0.3.0",
    "openai>=2.32.0",
    "langchain-openai>=1.2.0",
    "langchain-text-splitters>=1.1.2",
    "sec-edgar-downloader>=5.1.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.49",
    "numpy>=2.4.4",
    "greenlet>=3.4.0",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg[binary]>=3.3.3",
    "finnhub-python>=2.4.28",
    "sse-starlette>=3.3.4",
    "boto3>=1.42.95",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
